<resources>
    <string name="app_name">smart app</string>
    <string name="pass1">Password</string>
    <string name="log1">LOGIN</string>
    <string name="user">Username or Email</string>
    <string name="all">ALL ISSUES</string>
    <string name="raise">RAISE ISSUE</string>
    <string name="my">MY ISSUES</string>
    <string name="forgot">Forgot Password?</string>
    <string name="descr">Description</string>
    <string name="title">Title</string>
    <string name="submit">SUBMIT</string>
    <string name="TYPE">Complaint Type</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
