<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/b1"
    tools:context="com.example.app.myapp.raise">


    <Button
        android:id="@+id/all"
        style="@android:style/Widget.Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="43dp"
        android:text="@string/all"
        android:textSize="18sp" />

    <Button
        android:id="@+id/raise"
        style="@android:style/Widget.Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/all"
        android:layout_alignBottom="@+id/all"
        android:layout_centerHorizontal="true"
        android:text="@string/raise"
        android:textSize="18sp" />

    <Button
        android:id="@+id/my"
        style="@android:style/Widget.Button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/raise"
        android:layout_alignBottom="@+id/raise"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:text="@string/my"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/type"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="33dp"
        android:layout_toLeftOf="@+id/imageButton3"
        android:layout_toStartOf="@+id/imageButton3"
        android:fontFamily="sans-serif"
        android:text="@string/TYPE"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" tools:targetApi="jelly_bean"/>

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_alignBottom="@+id/type"
        android:layout_marginLeft="63dp"
        android:layout_marginStart="63dp"
        android:layout_toEndOf="@+id/type"
        android:layout_toRightOf="@+id/type" />

    <EditText
        android:id="@+id/descr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/type"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/my"
        android:layout_toStartOf="@+id/my"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/descr"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <ImageButton
        android:id="@+id/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descr"
        android:layout_marginEnd="11dp"
        android:layout_marginRight="11dp"
        android:layout_marginTop="37dp"
        android:layout_toLeftOf="@+id/raise"
        android:layout_toStartOf="@+id/raise"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <ImageButton
        android:id="@+id/imageButton3"
        style="@android:style/Widget.DeviceDefault.Light.ImageButton"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_alignBottom="@+id/camera"
        android:layout_centerHorizontal="true"
        app:srcCompat="@android:drawable/presence_audio_online" />

    <Button
        android:id="@+id/submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageButton3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:text="@string/submit"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/title"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/type"
        android:layout_alignStart="@+id/type"
        android:layout_below="@+id/all"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/title"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <SearchView
        android:layout_width="400dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/title" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignEnd="@+id/title"
        android:layout_alignRight="@+id/title"
        android:layout_alignTop="@+id/camera"
        app:srcCompat="@android:drawable/presence_video_online" />

</RelativeLayout>
